<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.UniversityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connected_to_the_future"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/the_view" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campus_title"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/campus" />

        <TextView
            style="@style/subTitles"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/residence_title"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/residence" />

        <TextView
            style="@style/subTitles"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/residence_body" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cultural_p_title"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/culturalImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/cultural" />

        <TextView
            style="@style/subTitles"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cultural_p_body" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sports_title"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/sport" />

        <TextView
            style="@style/subTitles"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports_body" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/communication_title"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/communication" />

        <TextView
            style="@style/subTitles"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/communication_body" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/events_title"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/events" />

        <TextView
            style="@style/subTitles"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events_body" />

        <com.google.android.material.card.MaterialCardView
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graduated_title"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/graduates" />

        <TextView
            style="@style/subTitles"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graduated_body" />

    </LinearLayout>

</ScrollView>