<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.fragments.AboutUsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_logo" />

        <TextView
            android:id="@+id/_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_appName" />


        <TextView
            android:id="@+id/_developedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/developers"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/_version" />

        <ImageView
            android:id="@+id/_fiaiLogo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@mipmap/fiai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_developedBy" />

        <TextView
            android:id="@+id/_fiaiName"
            android:layout_width="310dp"
            android:layout_height="52dp"
            android:text="Fábrica Introductoria de Aplicaciones Informáticas"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/_fiaiLogo" />


        <TextView
            android:id="@+id/_developmentTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/equipo_de_desarrollo"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:layout_constraintTop_toBottomOf="@+id/_fiaiName" />


        <TextView
            android:id="@+id/_teamMember1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/est_eddy_yoel_fresno_hern_ndez"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/_developmentTeam" />

        <TextView
            android:id="@+id/_teamMember2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/est_arael_david_espinosa_p_rez"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/_teamMember1" />


        <TextView
            android:id="@+id/_teamMember3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ing_yor_alex_reymond"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/_teamMember2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>