<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/_university"
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_main_university"
                    app:tint="@android:color/white" />

                <TextView
                    style="@style/titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ourUniversity"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/_courses"
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/_university">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_main_courses"
                    app:tint="@android:color/white" />

                <TextView
                    style="@style/titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/courses"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/_contacts"
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/_courses">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_main_contacts"
                    app:tint="@android:color/white" />

                <TextView
                    style="@style/titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/_games"
            style="@style/cardsMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/_contacts">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/ic_main_quiz"
                    app:tint="@android:color/white" />

                <TextView
                    style="@style/titles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_games" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>